# lsposed-module

./: .gitignore  config.pbtx  gradle.properties  lldb-preinit  settings.gradle.kts  simple.tt.trace.config  testlldbinit  ttlite.config
codelocator/: build.gradle.kts
codelocator/src/main/: AndroidManifest.xml
codelocator/src/main/java/com/example/codelocator/: CodeLocatorInjector.kt  MainActivity.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hookee/: build.gradle.kts
hookee/src/androidTest/java/com/example/hookee/: ExampleInstrumentedTest.kt
hookee/src/main/: AndroidManifest.xml
hookee/src/main/java/com/example/hookee/: App.kt  MainActivity.kt
hookee/src/main/res/values/: strings.xml
hookee/src/test/java/com/example/hookee/: ExampleUnitTest.kt
perfetto-trace/: build.gradle.kts
perfetto-trace/src/androidTest/java/com/example/view_tree/: ExampleInstrumentedTest.kt
perfetto-trace/src/main/: AndroidManifest.xml
perfetto-trace/src/main/assets/: xposed_init
perfetto-trace/src/main/java/com/example/hook/: Config.kt  Hook.kt  MainActivity.kt
perfetto-trace/src/main/res/layout/: activity_main.xml
perfetto-trace/src/main/res/values/: strings.xml
perfetto-trace/src/test/java/com/example/view_tree/: ExampleUnitTest.kt
scripts/: app-boot-trace.sh  codelocator.sh  config.properties  enable_hwui  profile-ins  reset-emu  scroll.sh  sys-trace-test.sh  sys-trace.sh  tracer.sh  view-tree.sh
scripts/python/: parser.py
test/: build.gradle.kts
test/src/main/: AndroidManifest.xml
test/src/main/assets/: xposed_init
test/src/main/java/com/example/test/: App.kt  DelayView.kt  MainActivity.kt  TestHooker.kt  ViewExt.kt
test/src/main/res/layout/: activity_main.xml
tester/: build.gradle.kts
tester/src/androidTest/java/com/example/codelocator/: ExampleInstrumentedTest.kt
tester/src/main/: AndroidManifest.xml
tester/src/main/assets/: xposed_init
tester/src/main/cpp/: CMakeLists.txt  art_method.h  atrace.h  mListener.h  mock-listener.h  tester.cpp  thread-announcement.h  utils.h  virlistener.h
tester/src/main/java/com/example/hook/: CodeLocatorInjector.kt  HookAllMethod.kt  MainActivity.kt
tester/src/main/res/values/: strings.xml
tester/src/test/java/com/example/codelocator/: ExampleUnitTest.kt
view-tree/: build.gradle.kts
view-tree/src/main/: AndroidManifest.xml
view-tree/src/main/assets/: xposed_init
view-tree/src/main/java/com/example/view_tree/: Cal.kt  Hooker.kt  ItemTraversalFinder.kt  MainActivity.kt  SurfaceViewFinder.kt  TraversalCalHooker.kt
view-tree/src/main/res/values/: strings.xml
wytrace/: CMakeLists.txt  build.gradle  record_android_trace.py
wytrace/src/main/: AndroidManifest.xml
wytrace/src/main/cpp/: art_method_trace.cpp  asm.h  jvmti.h  test.cpp
wytrace/src/main/cpp/arch/: arm64.S  arm64.asm
wytrace/src/main/cpp/faster/: compiler.h  file_writer.cpp  file_writer.h  lock_free_queue.cpp  lock_free_queue.h  logger_entry.cpp  logger_entry.h  process.cpp  process.h  shared.cpp  shared.h  thread_pool.cpp  trace_thread.cpp  trace_thread.h  tracer.cpp  tracer.h  utils.h
wytrace/src/main/cpp/perfetto/: custom_data_source.cpp  custom_data_source.h
wytrace/src/main/java/com/wy/lib/wytrace/: ArtMethodTrace.java
xappdebug/: build.gradle
(+17 files in other folders)
